<resources>
    <string name="app_name">LokaCar Site</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LokaCarDroid</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="string_list_car_status">Rented</string>
    <string name="prompt_registration">Registration</string>
    <string name="title_car_list">List</string>
    <string name="title_car_detail">Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_all">All</string>
    <string name="action_rented">Rented</string>
    <string name="action_no_rented">No rented</string>
    <string name="nav_park">Cars</string>
    <string name="nav_client">Client</string>
    <string name="nav_user">Users</string>
    <string name="nav_sales">Sales</string>
    <string name="nav_disconnection">Disconnect</string>

    <string name="title_activity_car_add">Add a car</string>
    <string name="action_modify">Modify</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_result">Deleted</string>
    <string name="undo_delete">Undo</string>
    <string name="action_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="nav_agency">Agency</string>
    <string name="nav_category">Category</string>
    <string name="nav_carbrand">Car brand</string>
    <string name="nav_carmodel">Car model</string>
    <string name="nav_leasing">Leasing</string>
    <string name="title_car_add">Add</string>
    <string name="title_car_modify">Modify</string>
</resources>
