<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_park"
            android:title="@string/nav_park" />
        <item
            android:id="@+id/nav_client"
            android:title="@string/nav_client" />
        <item
            android:id="@+id/nav_user"
            android:title="@string/nav_user" />
        <item
            android:id="@+id/nav_sales"
            android:title="@string/nav_sales" />
        <item
            android:id="@+id/nav_disconnection"
            android:title="@string/nav_disconnection" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
